style: fix team box on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -97,7 +97,7 @@ input[type='search']::-ms-clear {
 }
 
 .team-box {
-  width: calc(100% - 1rem);
+  width: 100%;
 }  
 
 @media screen and (min-width: 768px) {
